methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:8: error: ';' expected but ',' found.
                   def remiseEnPlace(){for (i<-1 to 7) {recule(),gauche();avance();avance();droite()}}
                                                                ^